--- a/client/views/users/users.jade
+++ b/client/views/users/users.jade
@@ -10,5 +10,7 @@ h3 {{name | uppercase}}
         label(for='password') Password
         input.form-control#password(type='password', name='password', ng-model='user.password')
       .form-group
-        button.btn.btn-default(type='submit', ng-click='submit(user)') Submit
-  .col-xs-8
+        button.btn.btn-default(type='submit', ng-click='submit(user)') Email
+        button.btn.btn-info(ng-click='oauth("twitter")'): i.fa.fa-twitter
+        button.btn.btn-info(ng-click='oauth("github")'): i.fa.fa-github
+        button.btn.btn-info(ng-click='oauth("google")'): i.fa.fa-google
