--- a/client/views/albums/albums-show.jade
+++ b/client/views/albums/albums-show.jade
@@ -15,9 +15,10 @@
         img(src='', height='200', alt='Image preview…')
       .form-group
         button.btn.form-control.btn-success(ng-click='savePhoto("upload")') Upload Photo
-table.table
-  tbody
-    tr(ng-repeat='image in images')
-      td: img(ng-src='{{image.$value}}')
-      td: button.btn.btn-danger.btn-xl(ng-click='deletePhoto(image,name)') Delete
-      td: button.btn.btn-info.btn-xl(ng-click='setPrimary(image)') Set Primary
+.row
+  .col-xs-4(ng-repeat='image in images')
+    img(ng-src='{{image.$value}}')
+    .row
+      .col-xs-12
+          button#photoButton.form-control.btn.btn-danger(ng-click='deletePhoto(image,name)') Delete
+          button#photoButton.form-control.btn.btn-info(ng-click='setPrimary(image,name)') Set Primary
