--- a/client/views/albums/albums-list.jade
+++ b/client/views/albums/albums-list.jade
@@ -5,4 +5,5 @@
       tbody
         tr(ng-repeat='name in names')
           td: h3: a(ui-sref='albums.show({name:name})') {{name}}
+          td: img(ng-src='{{primary[name]}}')
           td: button.btn.btn-xs.btn-danger.pull-right(ng-click='remove(name,$index)') Delete
